# glshim

./: .gitmodules  CMakeLists.txt
spec/: build
spec/yml/: glext-1.1.yml
src/: CMakeLists.txt  config.h
src/gl/: array.c  array.h  get.c  gl.c  gl_helpers.h  list.c  loader.h  matrix.cpp  matrix.h  pixel.c  state.h  texture.c
src/gl/wrap/: gles.c  gles.h  glstub.c
src/glx/: glesfuncs.inc  glx.c  lookup.c  utils.c
test/util/: mock.c  mock.h  test.h
